@@ -3,6 +3,7 @@
 * @verb
 * Counters for e.g. numbers of arguments read so far for a brace 
 command, or the row in a table.
+* check valid nestings
 * Implement parser options
 * Character encoding issues - read and pass to Perl correctly.
 
